--- a/templates/index_test.html
+++ b/templates/index_test.html
@@ -31,6 +31,9 @@
         <button class="btn btn-warning" id="btn_submit_my_name2">Ready Submit</button>
     </div>
 
+
+    <h3>Test git</h3>
+
 </body>
 
 </html>
