--- a/templates/index_test.html
+++ b/templates/index_test.html
@@ -34,6 +34,8 @@
 
     <h3>Test git</h3>
     <label for="">Test git hub</label>
+    
+    <label for="">Test pull git hub</label>
 </body>
 
 </html>
